fix: tolerate null engine-hint values in RenderContext
GenerationOptions deliberately allows null values in engineHints, but
RenderContext copied them with Map.copyOf, so generate() blew up with a
raw NullPointerException instead of staying inside the documented
DocumentGenerationException hierarchy. Map.copyOf also dropped the
insertion order the options preserve. Copy with an unmodifiable
LinkedHashMap, mirroring GenerationOptions.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>