@@ -1,6 +1,8 @@
 package io.github.nikolaynn.docengine.spi;
 
 import java.time.Duration;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
@@ -14,6 +16,11 @@ public record RenderContext(
 ) {
     public RenderContext {
         Objects.requireNonNull(tempFileManager, "tempFileManager");
-        engineHints = engineHints == null ? Map.of() : Map.copyOf(engineHints);
+        // null-tolerant, order-preserving copy: GenerationOptions deliberately
+        // allows null hint values and insertion order, both of which Map.copyOf
+        // would destroy
+        engineHints = engineHints == null
+            ? Map.of()
+            : Collections.unmodifiableMap(new LinkedHashMap<>(engineHints));
     }
 }
